--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,9 @@
 [submodule "sublime-text-3/Packages/sublime-cpp11"]
 	path = sublime-text-3/Packages/sublime-cpp11
 	url = https://github.com/noct/sublime-cpp11.git
+[submodule "terminal/color-schemes/shell"]
+	path = terminal/color-schemes/shell
+	url = https://github.com/chriskempson/base16-shell.git
+[submodule "terminal/color-schemes/cmd"]
+	path = terminal/color-schemes/cmd
+	url = https://github.com/geoffstokes/base16-windows-command-prompt.git
