Added shell setup.

--- a/.gitconfig
+++ b/.gitconfig
@@ -2,6 +2,6 @@
 	email = m.t.williams@live.com
 	name = Michael 'devbug' Williams
 [push]
-	default = simple
+	default = current
 [alias]
 	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr)%C(bold blue)<%an>%Creset' --abbrev-commit
