No longer use alias in git commits.

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,6 +1,6 @@
 [user]
 	email = m.t.williams@live.com
-	name = Michael 'devbug' Williams
+	name = Michael Williams
 [push]
 	default = current
 [alias]
