--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "terminal/color-schemes/cmd"]
 	path = terminal/color-schemes/cmd
 	url = https://github.com/geoffstokes/base16-windows-command-prompt.git
+[submodule "color-schemes"]
+	path = color-schemes
+	url = https://github.com/chriskempson/base16-builder.git
